--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,10 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+
+
     //add library
+    implementation 'com.google.firebase:firebase-messaging:15.0.2'
     implementation 'com.google.firebase:firebase-core:15.0.2'
     implementation 'com.google.firebase:firebase-database:15.0.0'
     implementation 'com.github.jd-alexander:android-flat-button:v1.1'
@@ -36,6 +39,15 @@ dependencies {
     implementation 'com.cepheuen.elegant-number-button:lib:1.0.2'
     implementation 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
     implementation 'com.readystatesoftware.sqliteasset:sqliteassethelper:+'
+    implementation 'io.paperdb:paperdb:2.1'
+    implementation 'com.github.rey5137:material:1.2.4'
+    implementation 'com.stepstone.apprating:app-rating:2.0.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-scalars:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.github.d-max:spots-dialog:0.7@aar'
+    implementation 'com.facebook.android:facebook-share:[4,5)'
+
 
     //Basic library
     implementation 'com.android.support:appcompat-v7:27.+'
